--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <nav>
                 <i class="fas fa-bars toggle-menu"></i>
                 <ul>
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#landing" class="active">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfoli">Portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="form">
                     <i class="fas fa-search"></i>
@@ -40,7 +40,7 @@
     </header>
     <!-- End Header -->
     <!-- Start Landing -->
-    <div class="landing">
+    <div class="landing" id="landing">
         <div class="overlay"></div>
         <div class="text">
             <div class="content">
@@ -59,7 +59,7 @@
     </div>
     <!-- End Landing -->
     <!-- Start Services -->
-    <div class="services">
+    <div class="services" id="services">
         <div class="container">
             <div class="main-heading">
                 <h2>Services</h2>
@@ -115,7 +115,7 @@
         </div>
         <!-- End Design -->
         <!-- Start Portfolio -->
-        <div class="portfolio">
+        <div class="portfolio" id="portfolio">
             <div class="container">
                 <div class="main-heading">
                     <h2>Portfolio</h2>
@@ -204,7 +204,7 @@
         </div>
         <!-- End Video -->
         <!-- Start About -->
-        <div class="about">
+        <div class="about" id="about">
             <div class="container">
                 <div class="main-heading">
                     <h2>About Us</h2>
@@ -309,7 +309,7 @@
         </div>
         <!-- End Quote -->
         <!-- Start Pricing -->
-        <div class="pricing">
+        <div class="pricing" id="pricing">
             <div class="container">
                 <div class="main-heading">
                     <h2>Pricing</h2>
@@ -399,7 +399,7 @@
         </div>
         <!-- End Subscribe -->
         <!-- Start Contact -->
-        <div class="contact">
+        <div class="contact" id="contact">
             <div class="container">
                 <div class="main-heading">
                     <h2>contact us</h2>
